--- a/index.html
+++ b/index.html
@@ -1,37 +1,166 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa" dir="rtl">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Maria Rad | Strategic Content Marketer</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Maria Rad | پرسونال برندینگ</title>
+  <style>
+    /* Reset */
+    * {
+      margin: 0; padding: 0; box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    body {
+      background: #fdfaf7;
+      color: #2c2c2c;
+      line-height: 1.6;
+      padding: 2rem;
+      max-width: 900px;
+      margin: auto;
+    }
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
+      border-bottom: 2px solid #fcd12a;
+      padding-bottom: 1rem;
+    }
+    header h1 {
+      font-size: 2.8rem;
+      font-weight: 900;
+      color: #333;
+      margin-bottom: 0.25rem;
+    }
+    header p {
+      font-size: 1.2rem;
+      font-weight: 600;
+      color: #666;
+      font-style: italic;
+    }
+    section {
+      margin-bottom: 3rem;
+    }
+    h2 {
+      font-weight: 700;
+      color: #444;
+      margin-bottom: 1rem;
+      border-bottom: 1.5px solid #fcd12a;
+      padding-bottom: 0.5rem;
+      font-size: 1.8rem;
+    }
+    p, li {
+      font-size: 1rem;
+      color: #444;
+      margin-bottom: 0.75rem;
+    }
+    ul {
+      list-style: none;
+      padding-right: 1rem;
+    }
+    ul li {
+      padding-right: 1.5rem;
+      position: relative;
+      margin-bottom: 0.6rem;
+    }
+    ul li::before {
+      content: "✓";
+      color: #fcd12a;
+      position: absolute;
+      right: 0;
+      font-weight: bold;
+    }
+    .projects .project {
+      border: 1px solid #eee;
+      padding: 1rem;
+      border-radius: 6px;
+      background: white;
+      margin-bottom: 1.5rem;
+      box-shadow: 0 2px 5px rgb(0 0 0 / 0.05);
+      transition: box-shadow 0.3s ease;
+    }
+    .projects .project:hover {
+      box-shadow: 0 5px 15px rgb(0 0 0 / 0.1);
+    }
+    .project h3 {
+      margin-bottom: 0.5rem;
+      color: #333;
+    }
+    .contact {
+      text-align: center;
+      font-size: 1.1rem;
+    }
+    .contact a {
+      color: #fcd12a;
+      text-decoration: none;
+      font-weight: 700;
+      transition: color 0.3s ease;
+    }
+    .contact a:hover {
+      color: #d0a30e;
+    }
+    footer {
+      text-align: center;
+      font-size: 0.9rem;
+      color: #aaa;
+      margin-top: 3rem;
+      border-top: 1px solid #eee;
+      padding-top: 1rem;
+    }
+  </style>
 </head>
 <body>
-    <header>
-        <h1>Maria Rad</h1>
-        <p>Strategic Content Marketer & Brand Storyteller</p>
-    </header>
-    <nav>
-        <a href="#about">About</a>
-        <a href="#portfolio">Portfolio</a>
-        <a href="#contact">Contact</a>
-    </nav>
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>Hi, I’m Maria — a content strategist helping human-centered brands grow through authentic storytelling and impactful marketing. I build content that not only performs — but transforms.</p>
-        </section>
-        <section id="portfolio">
-            <h2>Portfolio</h2>
-            <p>Here you’ll soon find case studies, viral content insights, and campaign results. Stay tuned!</p>
-        </section>
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>Let’s talk — maria[at]yourdomain.com</p>
-        </section>
-    </main>
-    <footer>
-        <p>© 2025 Maria Rad. All rights reserved.</p>
-    </footer>
+  <header>
+    <h1>Maria Rad (عارفه عبدالهی)</h1>
+    <p>Strategic Content Marketer & Brand Storyteller<br />مارکتر استراتژیک و روایت‌ساز برند</p>
+  </header>
+
+  <section>
+    <h2>معرفی</h2>
+    <p>من ماریا رادم، یک استراتژیست محتوا و سوشال مدیا منیجر با تمرکز روی برندهای انسان‌محور هستم که به رشد واقعی، تأثیر مثبت و ایجاد رابطه‌ی پایدار با مخاطب باور دارم. محتوا فقط باید دیده نشود، بلکه باید تصمیم و اعتماد بسازد.</p>
+    <p>در طول سال‌ها، به برندهای فرهنگی و مؤسسات رسانه‌ای کمک کرده‌ام تا روایت برندشان را واضح کنند، محتوایی بسازند که هم وایرال شود و هم ماندگار.</p>
+  </section>
+
+  <section>
+    <h2>مهارت‌ها</h2>
+    <ul>
+      <li>طراحی و اجرای استراتژی محتوا در شبکه‌های اجتماعی</li>
+      <li>ساخت ریلز و محتوای وایرال با ساختار قلاب–بدنه–جمع‌بندی</li>
+      <li>تحلیل عملکرد محتوا و بهینه‌سازی KPI</li>
+      <li>برندسازی استراتژیک و روایت‌سازی</li>
+      <li>کمپین‌های رشد و جذب مخاطب هدف</li>
+    </ul>
+  </section>
+
+  <section class="projects">
+    <h2>نمونه‌کارها</h2>
+
+    <div class="project">
+      <h3>کمپین بازبرندسازی و لانچ فکرت</h3>
+      <p>طراحی و اجرای استراتژی برندینگ رسانه‌ای برای «فکرت» شامل تغییر لوگو، شعار «گفت‌وگویی برای ساخت فردا»، و هماهنگی کامل پلتفرم‌ها (اینستاگرام، یوتیوب، تلگرام).</p>
+    </div>
+
+    <div class="project">
+      <h3>رشد اینستاگرام با محتوای وایرال</h3>
+      <p>ساخت ریلزهای مبتنی بر روایت‌سازی قلاب‌دار که منجر به افزایش ۳ برابری تعامل و رشد فالوئر در ۴ ماه شد.</p>
+    </div>
+
+    <div class="project">
+      <h3>طراحی سیستم محتوایی چندلایه</h3>
+      <p>ایجاد ساختار منسجم برای انتشار محتوا در چند کانال با حفظ لحن و هویت برند و بهینه‌سازی مصرف محتوا.</p>
+    </div>
+
+    <div class="project">
+      <h3>توسعه برند شخصی ماریا راد ۲.۰</h3><p>تعریف هویت برند شخصی، تعیین کهن‌الگو، الگوی لحن و مدل کسب‌وکار برای جذب پروژه‌های حرفه‌ای و اثرگذار.</p>
+    </div>
+  </section>
+
+  <section class="contact">
+    <h2>تماس با من</h2>
+    <p>ایمیل: <a href="mailto:maria.rad.content@gmail.com">maria.rad.content@gmail.com</a></p>
+    <p>لینکدین: <a href="https://linkedin.com/in/maria-rad-10091b23b" target="_blank" rel="noopener noreferrer">maria-rad-10091b23b</a></p>
+  </section>
+
+  <footer>
+    © 2025 Maria Rad | عارفه عبدالهی
+  </footer>
 </body>
 </html>
