--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
   <section class="contact">
     <h2>تماس با من</h2>
-    <p>ایمیل: <a href="mailto:maria.rad.content@gmail.com">maria.rad.content@gmail.com</a></p>
+    <p>ایمیل: <a href="mailto:AREFEABDOLAHI@gmail.com">maria.rad.content@gmail.com</a></p>
     <p>لینکدین: <a href="https://linkedin.com/in/maria-rad-10091b23b" target="_blank" rel="noopener noreferrer">maria-rad-10091b23b</a></p>
   </section>
 
