--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 					<h2 class="major">Get in touch</h2>
 					<ul class="contact">
 						<li class="icon solid fa-home">Tehran, Iran</li>
-						<li class="icon solid fa-envelope"><a href="mailto:mariarad78914@gmail.com">mariarad78914@gmail.com</a></li>
+						<li class="icon solid fa-envelope"><a href="mailto:Arefeseyedabdolahi@gmail.com">mariarad78914@gmail.com</a></li>
 						<li class="icon brands fa-linkedin"><a href="https://www.linkedin.com/in/arefe-abdolahi-10091b23b">LinkedIn</a></li>
 					</ul>
 					<ul class="copyright">
