Update index.html final

--- a/index.html
+++ b/index.html
@@ -3,89 +3,183 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Let’s Connect | Arefe SeyedAbdolahi</title>
+  <title>Arefe SeyedAbdolahi | Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Georgia', serif;
+      margin: 0;
+      font-family: 'Libre Baskerville', serif;
       background-color: #241b2f;
       color: #e0d7d0;
-      margin: 0;
-      padding: 0;
     }
-    .container {
+    section {
       padding: 80px 20px;
-      max-width: 900px;
-      margin: 0 auto;
+      max-width: 1100px;
+      margin: auto;
+      position: relative;
+    }
+    h1, h2, h3 {
+      color: #f4e8dd;
     }
     h1 {
       font-size: 3em;
-      margin-bottom: 20px;
-      color: #f4e8dd;
     }
-    p {
-      font-size: 1.2em;
-      margin-bottom: 1.5em;
+    h2 {
+      font-size: 2.5em;
+      margin-bottom: 0.5em;
     }
-    .contact-info {
+    p, li {
       font-size: 1.1em;
-      line-height: 2em;
+      line-height: 1.8em;
+    }
+    .intro {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-wrap: wrap;
+    }
+    .intro-text {
+      max-width: 60%;
+    }
+    .intro img {
+      max-width: 250px;
+      border-radius: 50%;
+      border: 4px solid #f4e8dd;
+    }
+    ul {
+      padding-left: 1.5em;
+    }
+    .skills {
+      text-align: center;
+      border: 1px solid #c8b7a6;
+      padding: 20px;
+      margin-top: 40px;
+    }
+    .timeline {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #c8b7a6;
+      padding-bottom: 40px;
+    }
+    .timeline-entry {
+      flex: 1;
+      text-align: center;
+    }
+    .certs {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 20px;
+      align-items: flex-start;
+    }
+    .certs img {
+      max-width: 300px;
+    }
+    .certs-text {
+      flex: 1;
+    }
+    .top-content {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 10px;
+      justify-content: center;
+      margin-top: 30px;
+    }
+    .top-content img {
+      max-width: 180px;
+      border-radius: 10px;
+    }
+    footer {
+      text-align: center;
+      padding: 40px;
     }
     a {
       color: #c8b7a6;
-      text-decoration: underline;
-    }
-    .divider {
-      height: 1px;
-      background-color: #c8b7a6;
-      margin-bottom: 40px;
-    }
-    .dots {
-      position: absolute;
-      top: 40px;
-      right: 50px;
-      display: flex;
-      gap: 10px;
-    }
-    .dot {
-      width: 10px;
-      height: 10px;
-      background-color: #e0d7d0;
-      border-radius: 50%;
-    }
-    .background-circle {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      width: 400px;
-      height: 400px;
-      background-color: #1f1529;
-      border-radius: 50%;
-      z-index: 0;
-    }
-    .container {
-      position: relative;
-      z-index: 1;
     }
   </style>
 </head>
 <body>
-  <div class="dots">
-    <div class="dot"></div>
-    <div class="dot"></div>
-    <div class="dot"></div>
-  </div>
-  <div class="background-circle"></div>
-  <div class="container">
-    <div class="divider"></div>
-    <h1>Let’s Connect!</h1>
-    <p>Thank you for taking the time to review my portfolio.</p>
-    <p>If you’re looking for someone who can create viral content, shape powerful brand stories, and bring results to your digital media presence — I’d love to hear from you.</p>
-    <p>Let’s build something amazing together.</p>
-    <div class="contact-info">
-      <p>📧 Contact: <a href="mailto:Arefeseyedabdolahi@gmail.com">Arefeseyedabdolahi@gmail.com</a></p>
-      <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/arefe-abdolahi-10091b23b">arefe-abdolahi-10091b23b</a></p>
-      <p>📱 09352772378</p>
+  <section class="intro">
+    <div class="intro-text">
+      <h1>Arefe SeyedAbdolahi</h1>
+      <p><em>Strategic Content Marketer | Brand Storyteller | Social Media Specialist</em></p>
+      <p><strong>Website:</strong> <a href="https://arefeabdolahi.ir">arefeabdolahi.ir</a></p>
     </div>
-  </div>
+    <img src="images/profile1.jpg" alt="Arefe SeyedAbdolahi">
+  </section>
+
+  <section>
+    <h2>Introduction</h2>
+    <p>I am a strategic content marketer and social media manager with a focus on human-centered growth and storytelling that builds trust, engagement, and real impact—not just visibility.</p>
+    <ul>
+      <li>With a background in cultural and mission-driven projects, I create content systems and campaigns that resonate deeply and perform meaningfully.</li>
+      <li>From 15-second viral reels to long-form strategy campaigns, I build with intention and execute with precision.</li>
+    </ul>
+  </section>
+
+  <section class="skills">
+    <h2>Personal Skills</h2>
+    <ul>
+      <li>Digital Campaign Management</li>
+      <li>Social Media Strategy</li>
+      <li>Social Media Marketing</li>
+      <li>Storytelling & Brand Voice</li>
+      <li>Performance Analysis</li>
+    </ul>
+  </section>
+
+  <section>
+    <h2>Experience</h2>
+    <div class="timeline">
+      <div class="timeline-entry">
+        <h3>2022</h3>
+        <p><strong>M.IT Group</strong><br>Sales Specialist<br>June 2022 – July 2022<br>Short-term sales project focusing on customer relationship building.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2024</h3>
+        <p><strong>Raze Negahe Aftabgardan</strong><br>Digital Marketing Expert<br>June 2022 – Feb 2024<br>Executed strategies for social initiatives, increased engagement via data.</p>
+      </div>
+      <div class="timeline-entry">
+        <h3>2025</h3>
+        <p><strong>Freelance</strong><br>Social Media Manager<br>Jan 2024 – Present<br>Managing brand storytelling strategies and growth systems.</p>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Education & Certifications</h2>
+    <div class="certs">
+      <img src="images/cert1.jpg" alt="Certificate 1">
+      <img src="images/cert2.jpg" alt="Certificate 2">
+      <img src="images/cert3.jpg" alt="Certificate 3">
+      <div class="certs-text">
+        <ul>
+          <li><strong>High School Diploma</strong> – Mathematics & Physics – Ministry of Education, Iran (2012)</li>
+          <li><strong>Tehran Institute of Technology</strong> – Freelancer, Digital Marketing – 110 hrs – Score: 70/100 – May 2025</li>
+          <li><strong>EF SET Certificate</strong> – B2 Level – Score: 57/100 – <a href="https://cert.efset.org/j8ihL9">EF Certificate Link</a></li>
+          <li><strong>Andisheh Danesh Institute (IDP)</strong> – Photoshop, Flash, CorelDRAW, IT Certificate (2010–2013)</li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+  <section>
+    <h2>Top Performing Content</h2>
+    <p>Page growth results from strategic content:</p>
+    <div class="top-content">
+      <img src="images/stats1.jpg" alt="stats1">
+      <img src="images/stats2.jpg" alt="stats2">
+      <img src="images/stats3.jpg" alt="stats3">
+      <img src="images/stats4.jpg" alt="stats4">
+      <img src="images/stats5.jpg" alt="stats5">
+    </div>
+  </section>
+
+  <footer>
+    <h2>Let’s Connect!</h2>
+    <p>If you’re looking for someone who can create viral content, shape powerful brand stories, and bring results to your digital media presence — I’d love to hear from you.</p>
+    <p><strong>Email:</strong> <a href="mailto:Arefeseyedabdolahi@gmail.com">Arefeseyedabdolahi@gmail.com</a></p>
+    <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/arefe-abdolahi-10091b23b">arefe-abdolahi-10091b23b</a></p>
+    <p><strong>Phone:</strong> 09352772378</p>
+  </footer>
 </body>
 </html>
